# Observix-Pro-Max

./: .gitignore  Makefile  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: release-linux.yml
alembic/: env.py
alembic/versions/: 9a45f6c18248_init.py
config/: agent.a.yaml  agent.b.yaml  agent.eu.1.yaml  agent.eu.2.yaml  agent.us.1.yaml  control_plane.example.yaml  control_plane.yaml  indexer.example.yaml  indexer.yaml
config/pipelines/: demo-file-tail-to-http.json  pipeline-agent-a-indexed.json  pipeline-agent-b-raw.json
examples/: http_sink.py  syslog_spammer.py  udp_sink.py
packaging/: README.md  install.sh  observix-ctl  uninstall.sh
packaging/config/: agent.example.yaml  control-plane.yaml  indexer.yaml
packaging/config/pipelines/: pipeline.example.indexed.json
packaging/systemd/: observix-agent@.service  observix-control-plane.service  observix-indexer.service
src/observix_agent/: __main__.py  agent.py  cli.py  events.py  pipeline.py  retry.py  state.py
src/observix_agent/destinations/: base.py  file.py  http.py  syslog_udp.py
src/observix_agent/processors/: base.py  indexed.py  indexer_http.py  raw.py
src/observix_agent/sources/: base.py  file_tail.py  syslog_udp.py  (+1 more)
src/observix_cli/: __main__.py  agent.py  cli.py  control_plane.py  indexer.py  main.py
src/observix_common/: config.py  logging.py  models.py  settings.py
src/observix_control_plane/: __main__.py  api.py  auth.py  cli.py  db.py  db_bootstrap.py  models.py  repository.py  service.py  store.py
src/observix_indexer/: __main__.py  api.py  cli.py  engine.py
(+7 files in other folders)
